# sample_app

./: .env.example  README.md  pyproject.toml  strands_agent.py  strands_evaluate.py
mlruns/0/: meta.yaml
mlruns/467541458624947873/: meta.yaml
mlruns/467541458624947873/265e7dc91f9e4189bc38a0e8ced8557a/: meta.yaml
mlruns/467541458624947873/265e7dc91f9e4189bc38a0e8ced8557a/tags/: mlflow.source.git.commit
mlruns/467541458624947873/9f3e3507acac42e8ae66795a4aa22cee/: meta.yaml
mlruns/467541458624947873/9f3e3507acac42e8ae66795a4aa22cee/tags/: mlflow.source.name
mlruns/467541458624947873/datasets/8235f5d64408b96713db3e06751327df/: meta.yaml
mlruns/467541458624947873/datasets/f6069ca6034987b11e50c495bb30f011/: meta.yaml
mlruns/467541458624947873/datasets/ff8d0213242247179e66d8360113fa62/: meta.yaml
mlruns/467541458624947873/ff69a2e86561480f8796efa102a4a4cf/: meta.yaml
mlruns/467541458624947873/ff69a2e86561480f8796efa102a4a4cf/tags/: mlflow.runName
mlruns/467541458624947873/traces/tr-72d802808eefcaab3ae8ed0a9f123512/: trace_info.yaml
mlruns/467541458624947873/traces/tr-a0c4657cdc838f001241522b3bab0237/: trace_info.yaml
mlruns/467541458624947873/traces/tr-b869f948e14221823b5f1715f2f68f41/: trace_info.yaml
mlruns/467541458624947873/traces/tr-c031f60506f6ce12bdc31153ff55a75a/: trace_info.yaml
mlruns/467541458624947873/traces/tr-e1dedd2fa03bbd62e7544f81befa3f35/: trace_info.yaml
mlruns/467541458624947873/traces/tr-f42087e4a3bd0bd01da11a091721d55f/: trace_info.yaml
(+49 files in other folders)
